src/objects/Interactions__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Identifier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Is_Account_Team_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is by default unchecked, and will be updated by Flow when user tries to create a new Interaction record</description>
        <label>User Is Account Team Member</label>
        <type>Checkbox</type>
    </fields>
    <label>Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Interactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Access_Set__c</fullName>
        <label>Access Set</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Olam_Share__c</fullName>
        <label>Olam Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>Primary_Acnt_Owner_To_Create_Interaction</fullName>
        <active>false</active>
        <errorConditionFormula>ISNEW() &amp;&amp; NOT( ISBLANK( Account__c ) ) &amp;&amp;
(NOT( $Permission.Olam_Validation_Exception )&amp;&amp;( CASESAFEID($User.Id) &lt;&gt; CASESAFEID( Account__r.Dairy_Owner_Id__c) &amp;&amp; TEXT( Business_Unit__c )= &apos;Dairy&apos;
) || ( CASESAFEID($User.Id) &lt;&gt; CASESAFEID( Account__r.Cocoa_Owner__c ) &amp;&amp; TEXT( Business_Unit__c )= &apos;Cocoa&apos;
))</errorConditionFormula>
        <errorMessage>Only Primary Account Owners can create Interaction</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Is_Not_Account_Team_Member</fullName>
        <active>true</active>
        <errorConditionFormula>isnew() &amp;&amp; User_Is_Account_Team_Member__c = FALSE &amp;&amp; not($Permission.Olam_Validation_Exception)</errorConditionFormula>
        <errorMessage>You cannot create Interactions if you are not part of the Account Team. Add yourself as a Team Member in the Account before creating Interactions.</errorMessage>
    </validationRules>
</CustomObject>